# diy-transit-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/specops/: SKILL.md
.claude/agents/: spec-drift-auditor.md
config/: example.yaml
plans/: README.md  data-fetch.md  otp-report.md  package-scaffold.md
specs/: README.md  architecture.md  data-model.md  principles.md
specs/behaviors/: config-validation.md
src/diy_transit_analysis/: __init__.py  cli.py  config.py
src/diy_transit_analysis/gtfs/: schedule.py
src/diy_transit_analysis/report/: on_time_performance.py
src/diy_transit_analysis/tides/: historic.py
tests/: test_config.py  test_gtfs_schedule.py  test_otp_report.py  test_tides_historic.py
tests/fixtures/: build_fixture_gtfs.py
