[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diy-transit-analysis"
version = "0.1.0"
description = "Pull a transit agency's GTFS Schedule feed and historic TIDES performance data, and report on on-time performance / cancellations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Evan Siroky" }]

dependencies = [
    "gtfs-kit>=10.1",
    "google-cloud-storage>=2.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
diy-transit-analysis = "diy_transit_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
